crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-no_text_engine-dataset-hybrid_single_column_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                    |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                                           |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                                      |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer)._score                     |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, subject]                                                 |
| physical_plan | ProjectionExec: expr=[subject@1 as subject]                                                                                             |
|               |   SortPreservingMergeExec: [_score@2 DESC NULLS LAST, id@0 ASC], fetch=4                                                                |
|               |     CooperativeExec                                                                                                                     |
|               |       BytesProcessedExec                                                                                                                |
|               |         SortExec: TopK(fetch=4), expr=[_score@2 DESC NULLS LAST, id@0 ASC], preserve_partitioning=[true]                                |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                          |
|               |             DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=64, scan=hnsw, projection=[id, subject, _score] |
|               |                                                                                                                                         |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
