crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                              |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer).question, vector_search(qs, Utf8("second"), answer).subject, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)) AS _score |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id, question, subject]                                                                                                                                                                                      |
| physical_plan | SortExec: TopK(fetch=4), expr=[_score@4 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[false]                                                                                                                                                                                                |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                                                                         |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, question@1 as question, subject@3 as subject, trunc(_score@4, 3) as _score]                                                                                                                                                            |
|               |       CooperativeExec                                                                                                                                                                                                                                                                            |
|               |         BytesProcessedExec                                                                                                                                                                                                                                                                       |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                   |
|               |             DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=256, scan=hnsw, projection=[id, question, answer, subject, _score]                                                                                                                                       |
|               |                                                                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
