crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-duckdb-no_text_engine-dataset-text_search_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'Client specified an invalid argument', message: "Table 'spice.public.qs' does not have an embedding index."
